name:                htracer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dominichamon/htracer#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Dominic Hamon
maintainer:          dma+github@stripysock.com
copyright:           Copyright (c) 2016, Dominic Hamon
category:            test
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Image
                     , Intersect
                     , Point
                     , Raytrace
                     , Vector
  build-depends:       base
                     , bytestring >= 0.10.6.0
  default-language:    Haskell2010

executable htracer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts -funbox-strict-fields
  build-depends:       base
                     , htracer
  default-language:    Haskell2010

test-suite htracer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , htracer
  ghc-options:         -rtsopts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dominichamon/htracer
